--- a/src/containers/appointmentsPage/AppointmentsPage.css
+++ b/src/containers/appointmentsPage/AppointmentsPage.css
@@ -2,6 +2,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .mainPageSecondaryWrapper {
