--- a/src/components/fonts/fonts.css
+++ b/src/components/fonts/fonts.css
@@ -1,3 +1,12 @@
+.fontH3 {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 0px;
+    margin-bottom: 12px;
+}
+
 .fontH2 {
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 500;
@@ -10,6 +19,14 @@
 .fontH1 {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 34px;
+    padding: 0px;
+    margin: 0px;
+    font-weight: 500;
+}
+
+.fontP {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 15px;
     padding: 0px;
     margin: 0px;
     font-weight: 500;
