--- a/src/containers/contactsPage/ContactPage.css
+++ b/src/containers/contactsPage/ContactPage.css
@@ -13,10 +13,20 @@
 
 .mainPageColumn1 {
     flex-grow: 1;
+    padding: 40px;
+}
+
+.contactTilesList {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-top: 1px solid #dfdfdf;
+    border-left: 1px solid #dfdfdf;
 }
 
 .mainPageColumn2 {
     width: 420px;
+    min-width: 420px;
     border-left: 1px solid #f2f2f2;
     padding: 40px;
 }
