--- a/src/components/tile/Tile.css
+++ b/src/components/tile/Tile.css
@@ -1,10 +1,14 @@
 .tileParentWrapper {
-    border-bottom: 1px solid #dfdfdf;
-    border-right: 1px solid #dfdfdf;
-    background-color: #f2f2f2;
-    padding: 24px;
-    display: flex;
-    flex-direction: column;
+    padding-right: 24px;
+    padding-bottom: 24px;
     width: 50%;
     box-sizing: border-box;
+}
+
+.tileChildWrapper {
+    border: 1px solid #f2f2f2;
+    background-color: #00000004;
+    display: flex;
+    padding: 24px;
+    flex-direction: column;
 }
