--- a/src/containers/contactsPage/ContactPage.css
+++ b/src/containers/contactsPage/ContactPage.css
@@ -13,15 +13,13 @@
 
 .mainPageColumn1 {
     flex-grow: 1;
-    padding: 40px;
+    padding: 40px 16px 40px 40px;
 }
 
 .contactTilesList {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border-top: 1px solid #dfdfdf;
-    border-left: 1px solid #dfdfdf;
 }
 
 .mainPageColumn2 {
