--- a/src/containers/appointmentsPage/AppointmentsPage.css
+++ b/src/containers/appointmentsPage/AppointmentsPage.css
@@ -6,16 +6,25 @@
 }
 
 .mainPageSecondaryWrapper {
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
-    flex-grow: 1;
 }
 
 .mainPageColumn1 {
     flex-grow: 1;
+    padding: 40px 16px 40px 40px;
+}
+
+.TilesListWrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .mainPageColumn2 {
     width: 420px;
+    min-width: 420px;
     border-left: 1px solid #f2f2f2;
+    padding: 40px;
 }
