--- a/src/containers/contactsPage/ContactPage.css
+++ b/src/containers/contactsPage/ContactPage.css
@@ -16,7 +16,7 @@
     padding: 40px 16px 40px 40px;
 }
 
-.contactTilesList {
+.TilesListWrapper {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
